...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-120dp"
        android:gravity="center">

        <Switch
            android:id="@+id/play_only_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play Only" />
    </LinearLayout>

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/local_participant_renderer"
        android:layout_width="144dp"
        android:layout_height="144dp"

        android:layout_gravity="center" />

    <TextView
        android:layout_marginTop="80dp"
        android:id="@+id/broadcasting_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="visible"
        android:textSize="14sp"
        android:textStyle="bold"
...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:gravity="center">

        <Button
            android:id="@+id/toggle_send_audio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="Disable Send Audio"
            />

        <Button
            android:id="@+id/toggle_send_video_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Disable Send Video"
            android:layout_marginHorizontal="10dp"
             />

    </LinearLayout>

    <org.webrtc.SurfaceViewRenderer
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="center">

        <Button
            android:id="@+id/show_stats_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Stats"
            />

        <Button
            android:layout_marginStart="10dp"
            android:id="@+id/join_conference_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Join Conference"
            android:onClick="joinConference"
            />


    </LinearLayout>

...
