<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/stats_popup_container"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
...
                            android:text="Bytes Sent:"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
                        <TextView
                            android:id="@+id/multitrack_stats_popup_bytes_sent_video_textview"
                            android:layout_marginLeft="2.5dp"
                            android:text=""
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
...
                    android:layout_height="wrap_content">

                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:orientation="vertical"
                    android:id="@+id/multitrack_stats_popup_play_stats_video_track_recyclerview"
                    android:layout_below="@+id/multitrack_stats_popup_play_stats_video_track_stats_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

...

                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:orientation="vertical"
                    android:layout_below="@+id/multitrack_stats_popup_play_stats_audio_track_stats_title"
                    android:id="@+id/multitrack_stats_popup_play_stats_audio_track_recyclerview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>
...
        <Button
            android:layout_marginTop="5dp"
            android:text="Close"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/multitrack_stats_popup_play_stats_main_container"

            android:id="@+id/multitrack_stats_popup_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>

    </RelativeLayout>
...
