<resources>
    <string name="app_name">Ant Media WebRTC Sample App</string>
    <string name="start">Start</string>
    <string name="write_something">Write a Message!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="serverAddress">server_address</string>
    <string name="serverPort">server_port</string>
    <string name="streamId">stream_id</string>
    <string name="roomId">room_id</string>
    <string name="settings_button_name">Settings</string>
    <string name="stream_mode">streaming_mode</string>
    <string name="send_image_button_name">Send Image</string>
    <string name="playing">Playing</string>
    <string name="data_channel_not_available">"Data channel is not available. Enable data channel in both Android and Server side and then restart Streaming</string>
    <string name="speaking">Speaking</string>
    <string name="live">Live</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="connecting">Connecting</string>
    <string name="disconnected">Disconnected</string>


</resources>
