package io.antmedia.webrtc_android_sample_app;

import static android.provider.Settings.System.getString;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.swipeUp;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.RootMatchers.isDialog;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static androidx.test.platform.app.InstrumentationRegistry.getInstrumentation;
import static org.hamcrest.CoreMatchers.anyOf;
import static org.junit.Assert.assertNotNull;
import static org.junit.Assert.assertTrue;



import android.content.Context;
import android.content.Intent;
import android.content.SharedPreferences;
import android.os.SystemClock;
import android.util.Log;
import android.view.View;
import android.widget.TextView;

import androidx.preference.PreferenceManager;
import androidx.recyclerview.widget.RecyclerView;
import androidx.test.core.app.ActivityScenario;

import androidx.test.core.app.ApplicationProvider;
import androidx.test.espresso.IdlingRegistry;
import androidx.test.espresso.IdlingResource;
import androidx.test.espresso.UiController;
import androidx.test.espresso.ViewAction;
import androidx.test.espresso.matcher.ViewMatchers;

import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.rule.GrantPermissionRule;
import androidx.test.uiautomator.UiDevice;



import org.hamcrest.Matcher;
import org.junit.After;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.rules.TestWatcher;
import org.junit.runner.Description;
import org.junit.runner.RunWith;

import java.io.IOException;
import java.util.concurrent.atomic.AtomicReference;

import io.antmedia.webrtc_android_sample_app.advanced.ConferenceActivityWithDifferentVideoSources;
import io.antmedia.webrtc_android_sample_app.basic.ConferenceActivity;
import io.antmedia.webrtc_android_sample_app.basic.SettingsActivity;
import io.antmedia.webrtcandroidframework.core.PermissionHandler;


/**
 * Instrumented test, which will execute on an Android device.
 *
 * @see <a href="http://d.android.com/tools/testing">Testing documentation</a>
 */
@RunWith(AndroidJUnit4.class)
public class ConferenceActivityTest {
    private static final String TAG = "ConferenceActivityTest";
    private static final long RECONNECT_TIMEOUT_MS = 90000L;
    private static final long RECONNECT_STATUS_POLL_INTERVAL_MS = 1000L;
    private static final long RECONNECT_STABILITY_PERIOD_MS = 5000L;
    private static final long STATS_RETRY_DELAY_MS = 1000L;
    private static final int STATS_RETRY_COUNT = 20;

    @Rule
    public GrantPermissionRule permissionRule
            = GrantPermissionRule.grant(PermissionHandler.FULL_PERMISSIONS);

    private IdlingResource mIdlingResource;

    @Rule
    public ActivityScenarioRule<ConferenceActivity> conferenceActivityScenarioRule = new ActivityScenarioRule<>(ConferenceActivity.class);

    private String runningTest;
    private String roomName;

    @Before
    public void before() throws IOException {
        System.out.println("before test");
        connectInternet();

        getInstrumentation().waitForIdleSync();
        Context context = ApplicationProvider.getApplicationContext();
        SharedPreferences sharedPreferences = PreferenceManager.getDefaultSharedPreferences(context);
        roomName = sharedPreferences.getString(context.getString(R.string.roomId), SettingsActivity.DEFAULT_ROOM_NAME);
    }

    @After
    public void after() {
        System.out.println("after test");
        try {
            Thread.sleep(1000);
        } catch (InterruptedException e) {
            throw new RuntimeException(e);
        }

    }

    @Rule
    public TestWatcher watchman= new TestWatcher() {

        @Override
        protected void failed(Throwable e, Description description) {
            Log.i("TestWatcher", "*** "+description + " failed!\n");
        }

        @Override
        protected void succeeded(Description description) {
            Log.i("TestWatcher", "*** "+description + " succeeded!\n");
        }

        protected void starting(Description description) {
            Log.i("TestWatcher", "******\n*** "+description + " starting!\n");
            runningTest = description.toString();
        }

        protected void finished(Description description) {
            Log.i("TestWatcher", "*** "+description + " finished!\n******\n");
        }
    };

    @Test
    public void testJoinMultitrackRoom() {
        conferenceActivityScenarioRule.getScenario().onActivity(activity -> {
            mIdlingResource = activity.getIdlingResource();
            IdlingRegistry.getInstance().register(mIdlingResource);
            activity.sendBroadcast(new Intent(Intent.ACTION_CLOSE_SYSTEM_DIALOGS));
        });

        onView(withId(R.id.join_conference_button)).check(matches(withText("Join Conference")));
        onView(withId(R.id.join_conference_button)).perform(click());

        onView(withId(R.id.join_conference_button)).check(matches(withText("Leave")));
        try {
            Thread.sleep(10000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        onView(withId(R.id.broadcasting_text_view))
                .check(matches(withText(R.string.live)));

        onView(withId(R.id.join_conference_button)).perform(click());

        Log.i(ConferenceActivityTest.class.getSimpleName(), "is idling idle now before sleep:"+mIdlingResource.isIdleNow());
        try {
            Thread.sleep(5000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        Log.i(ConferenceActivityTest.class.getSimpleName(), "is idling idle now after sleep:"+mIdlingResource.isIdleNow());

        onView(withId(R.id.broadcasting_text_view))
                .check(matches(withText(R.string.disconnected)));

        IdlingRegistry.getInstance().unregister(mIdlingResource);
    }


    @Test
    public void testJoinWithExternalParticipant() throws InterruptedException {
        conferenceActivityScenarioRule.getScenario().onActivity(activity -> {
            mIdlingResource = activity.getIdlingResource();
            IdlingRegistry.getInstance().register(mIdlingResource);
            activity.sendBroadcast(new Intent(Intent.ACTION_CLOSE_SYSTEM_DIALOGS));
        });

        onView(withId(R.id.join_conference_button)).check(matches(withText("Join Conference")));
        onView(withId(R.id.join_conference_button)).perform(click());

        RemoteConferenceParticipant participant = RemoteConferenceParticipant.addConferenceParticipant(roomName, runningTest);

        Thread.sleep(10000);

        onView(withId(R.id.broadcasting_text_view))
                .check(matches(withText(R.string.live)));


        onView(withId(R.id.show_stats_button)).perform(click());

        Thread.sleep(10000);

        onView(withId(R.id.stats_popup_container)).perform(swipeUp());

        onView(withId(R.id.multitrack_stats_popup_play_stats_video_track_recyclerview)).inRoot(isDialog()).check(matches(isDisplayed()));


       // Thread.sleep(5000);

        onView(withId(R.id.multitrack_stats_popup_play_stats_video_track_recyclerview))
                .perform(waitForTrackStatsItem());

        onView(withId(R.id.multitrack_stats_popup_play_stats_video_track_recyclerview))
                .check((view, noViewFoundException) -> {
                    if (noViewFoundException != null) {
                        throw noViewFoundException;
                    }
                    TextView textView1 = requireFirstTrackStatTextView((RecyclerView) view);
                    int bytesReceived = Integer.parseInt(( textView1).getText().toString());
                    assertTrue(bytesReceived > 0);
                });

        onView(withId(R.id. stats_popup_container)).perform(swipeUp());

     //   Thread.sleep(3000);

        onView(withId(R.id.multitrack_stats_popup_close_button)).perform(click());

        onView(withId(R.id.join_conference_button)).check(matches(withText("Leave")));

        onView(withId(R.id.join_conference_button)).perform(click());

        Thread.sleep(3000);

        onView(withId(R.id.broadcasting_text_view))
                .check(matches(withText(R.string.disconnected)));

        participant.leave();
        IdlingRegistry.getInstance().unregister(mIdlingResource);
    }

    @Test
    public void testJoinWithoutVideo() throws InterruptedException {
        conferenceActivityScenarioRule.getScenario().onActivity(activity -> {
            mIdlingResource = activity.getIdlingResource();
            IdlingRegistry.getInstance().register(mIdlingResource);
            activity.sendBroadcast(new Intent(Intent.ACTION_CLOSE_SYSTEM_DIALOGS));
        });

        onView(withId(R.id.toggle_send_audio_button)).check(matches(withText("Disable Send Audio")));
        onView(withId(R.id.toggle_send_audio_button)).perform(click());

        onView(withId(R.id.toggle_send_video_button)).check(matches(withText("Disable Send Video")));
        onView(withId(R.id.toggle_send_video_button)).perform(click());

        onView(withId(R.id.join_conference_button)).check(matches(withText("Join Conference")));
        onView(withId(R.id.join_conference_button)).perform(click());

        RemoteConferenceParticipant participant = RemoteConferenceParticipant.addConferenceParticipant(roomName, runningTest);

        Thread.sleep(10000);

        onView(withId(R.id.broadcasting_text_view))
                .check(matches(withText(R.string.live)));


        onView(withId(R.id.show_stats_button)).perform(click());

        //wait to collect some stats
        Thread.sleep(5000);


        //black frame sender should be working.
        onView(withId(R.id.stats_popup_container))
                .perform(waitForNumericTextViewValueGreaterThan(
                        R.id.multitrack_stats_popup_bytes_sent_video_textview,
                        0f,
                        "Timed out waiting for sent video bytes to become positive"
                ));

        onView(withId(R.id. stats_popup_container)).perform(swipeUp());

        Thread.sleep(3000);

        onView(withId(R.id.stats_popup_container))
                .perform(waitForAnyTrackStatsItem())
                .check((view, noViewFoundException) -> {
                    if (noViewFoundException != null) {
                        throw noViewFoundException;
                    }
                    TextView textView1 = requireFirstAvailableTrackStatTextView(view);
                    int bytesReceived = Integer.parseInt(( textView1).getText().toString());
                    assertTrue(bytesReceived > 0);
                });


        Thread.sleep(3000);

        onView(withId(R.id.multitrack_stats_popup_close_button)).perform(click());

        Thread.sleep(3000);

        onView(withId(R.id.toggle_send_video_button)).check(matches(withText("Enable Send Video")));
        onView(withId(R.id.toggle_send_video_button)).perform(click());

        Thread.sleep(10000);

        onView(withId(R.id.broadcasting_text_view))
                .check(matches(withText(R.string.live)));

        onView(withId(R.id.show_stats_button)).perform(click());

        Thread.sleep(3000);

        onView(withId(R.id.multitrack_stats_popup_bytes_sent_video_textview)).check((view, noViewFoundException) -> {
            String text = ((TextView) view).getText().toString();
            float value = Float.parseFloat(text);
            assertTrue(value > 0f);

        });

        onView(withId(R.id. stats_popup_container)).perform(swipeUp());

        Thread.sleep(3000);

        onView(withId(R.id.multitrack_stats_popup_close_button)).perform(click());

        Thread.sleep(3000);

        onView(withId(R.id.join_conference_button)).perform(click());

        Thread.sleep(3000);

        onView(withId(R.id.broadcasting_text_view))
                .check(matches(withText(R.string.disconnected)));

        participant.leave();
        IdlingRegistry.getInstance().unregister(mIdlingResource);

    }


    //@Test TODO FIX
    public void testJoinPlayOnlyAsFirstPerson() throws InterruptedException {
        conferenceActivityScenarioRule.getScenario().onActivity(new ActivityScenario.ActivityAction<ConferenceActivity>() {
            @Override
            public void perform(ConferenceActivity activity) {
                mIdlingResource = activity.getIdlingResource();
                IdlingRegistry.getInstance().register(mIdlingResource);
                activity.sendBroadcast(new Intent(Intent.ACTION_CLOSE_SYSTEM_DIALOGS));
            }
        });

        onView(withId(R.id.play_only_switch)).check(matches(withText("Play Only")));
        onView(withId(R.id.play_only_switch)).perform(click());


        //onView(withId(R.id.join_conference_button)).check(matches(withText("Join Conference")));
        onView(withId(R.id.join_conference_button)).perform(click());

        RemoteConferenceParticipant participant = RemoteConferenceParticipant.addConferenceParticipant(roomName, runningTest);

        Thread.sleep(10000);

        onView(withId(R.id.show_stats_button)).perform(click());

        Thread.sleep(5000);

        onView(withId(R.id.multitrack_stats_popup_play_stats_video_track_recyclerview)).inRoot(isDialog()).check(matches(isDisplayed()));

        onView(withId(R.id.multitrack_stats_popup_play_stats_video_track_recyclerview))
                .perform(waitForTrackStatsItem())
                .check((view, noViewFoundException) -> {
                    if (noViewFoundException != null) {
                        throw noViewFoundException;
                    }
                    TextView textView1 = requireFirstTrackStatTextView((RecyclerView) view);
                    int bytesReceived = Integer.parseInt(( textView1).getText().toString());
                    assertTrue(bytesReceived > 0);
                });

        onView(withId(R.id. stats_popup_container)).perform(swipeUp());

        Thread.sleep(3000);

        onView(withId(R.id.multitrack_stats_popup_close_button)).perform(click());

        Thread.sleep(5000);

        onView(withId(R.id.join_conference_button)).check(matches(withText("Leave")));

        onView(withId(R.id.join_conference_button)).perform(click());

        participant.leave();
        IdlingRegistry.getInstance().unregister(mIdlingResource);
    }

    @Test
    public void testConferenceReconnect() throws IOException, InterruptedException {
        conferenceActivityScenarioRule.getScenario().onActivity(activity -> {
            mIdlingResource = activity.getIdlingResource();
            IdlingRegistry.getInstance().register(mIdlingResource);
            activity.sendBroadcast(new Intent(Intent.ACTION_CLOSE_SYSTEM_DIALOGS));
        });

        onView(withId(R.id.join_conference_button)).check(matches(withText("Join Conference")));
        onView(withId(R.id.join_conference_button)).perform(click());

        RemoteConferenceParticipant participant = RemoteConferenceParticipant.addConferenceParticipant(roomName, runningTest);

        Thread.sleep(10000);
        onView(withId(R.id.broadcasting_text_view))
                .check(matches(withText(R.string.live)));

        int[] disconnectDurationsMs = {1000, 3000, 5000, 7000, 10000, 1000, 3000, 5000, 7000, 10000};
        for (int cycle = 0; cycle < disconnectDurationsMs.length; cycle++) {
            int cycleNumber = cycle + 1;
            int disconnectDurationMs = disconnectDurationsMs[cycle];
            Log.i(TAG, "Reconnect stress cycle " + cycleNumber
                    + ": disconnecting for " + disconnectDurationMs + " ms");

            disconnectInternet();
            Thread.sleep(disconnectDurationMs);
            connectInternet();

            Log.i(TAG, "Reconnect stress cycle " + cycleNumber
                    + ": internet restored, waiting up to " + RECONNECT_TIMEOUT_MS + " ms for Live");
            waitForBroadcastStatus(R.string.live, RECONNECT_TIMEOUT_MS, cycleNumber);
        }

        onView(withId(R.id.join_conference_button)).perform(click());
        Thread.sleep(3000);
        onView(withId(R.id.broadcasting_text_view))
                .check(matches(withText(R.string.disconnected)));

        participant.leave();
        IdlingRegistry.getInstance().unregister(mIdlingResource);
    }

    private void waitForBroadcastStatus(int expectedStatusResId, long timeoutMs, int cycleNumber)
            throws InterruptedException {
        String expectedStatus = ApplicationProvider.getApplicationContext().getString(expectedStatusResId);
        long startTimeMs = SystemClock.elapsedRealtime();
        AtomicReference<String> actualStatus = new AtomicReference<>("<unavailable>");
        AtomicReference<String> connectionState = new AtomicReference<>("<unavailable>");
        AtomicReference<Boolean> connectionHealthy = new AtomicReference<>(false);
        String lastLoggedStatus = null;
        String lastLoggedConnectionState = null;
        long healthySinceMs = -1;

        while (SystemClock.elapsedRealtime() - startTimeMs < timeoutMs) {
            conferenceActivityScenarioRule.getScenario().onActivity(activity -> {
                TextView statusView = activity.findViewById(R.id.broadcasting_text_view);
                actualStatus.set(statusView == null ? "<missing view>" : statusView.getText().toString());
                String publishStreamId = activity.getPublishStreamId();
                boolean reconnecting = activity.getWebRTCClient().isReconnectionInProgress();
                boolean publishConnected = publishStreamId != null
                        && activity.getWebRTCClient().isStreaming(publishStreamId);
                boolean playConnected = activity.getWebRTCClient().isStreaming(roomName);
                connectionHealthy.set(!reconnecting && publishConnected && playConnected);
                connectionState.set("reconnecting=" + reconnecting
                        + ", publishStreamId=" + publishStreamId
                        + ", publishConnected=" + publishConnected
                        + ", playConnected=" + playConnected);
            });

            long elapsedMs = SystemClock.elapsedRealtime() - startTimeMs;
            if (!actualStatus.get().equals(lastLoggedStatus)) {
                Log.i(TAG, "Reconnect stress cycle " + cycleNumber + ": status changed to '"
                        + actualStatus.get() + "' after " + elapsedMs + " ms");
                lastLoggedStatus = actualStatus.get();
            }
            if (!connectionState.get().equals(lastLoggedConnectionState)) {
                Log.i(TAG, "Reconnect stress cycle " + cycleNumber + ": connection state changed after "
                        + elapsedMs + " ms: " + connectionState.get());
                lastLoggedConnectionState = connectionState.get();
            }

            boolean healthy = expectedStatus.equals(actualStatus.get()) && connectionHealthy.get();
            if (healthy && healthySinceMs < 0) {
                healthySinceMs = SystemClock.elapsedRealtime();
                Log.i(TAG, "Reconnect stress cycle " + cycleNumber
                        + ": connection is healthy; starting " + RECONNECT_STABILITY_PERIOD_MS
                        + " ms stability check");
            } else if (!healthy) {
                healthySinceMs = -1;
            }

            if (healthySinceMs >= 0
                    && SystemClock.elapsedRealtime() - healthySinceMs >= RECONNECT_STABILITY_PERIOD_MS) {
                Log.i(TAG, "Reconnect stress cycle " + cycleNumber
                        + ": stable recovery completed after " + elapsedMs + " ms");
                return;
            }
            Thread.sleep(RECONNECT_STATUS_POLL_INTERVAL_MS);
        }

        long elapsedMs = SystemClock.elapsedRealtime() - startTimeMs;
        Log.e(TAG, "Reconnect stress cycle " + cycleNumber + ": timed out after " + elapsedMs
                + " ms; expected='" + expectedStatus + "', actual='" + actualStatus.get()
                + "', " + connectionState.get());
        throw new AssertionError("Reconnect stress cycle " + cycleNumber + " did not recover within "
                + timeoutMs + " ms. Expected status '" + expectedStatus + "' but was '"
                + actualStatus.get() + "'; " + connectionState.get() + ".");
    }

    private ViewAction waitForTrackStatsItem() {
        return new ViewAction() {
            @Override
            public Matcher<View> getConstraints() {
                return ViewMatchers.isAssignableFrom(RecyclerView.class);
            }

            @Override
            public String getDescription() {
                return "wait for track stats recycler view to contain and bind the first item";
            }

            @Override
            public void perform(UiController uiController, View view) {
                RecyclerView recyclerView = (RecyclerView) view;
                assertNotNull("Stats RecyclerView adapter is null", recyclerView.getAdapter());

                for (int i = 0; i < STATS_RETRY_COUNT; i++) {
                    if (recyclerView.getAdapter().getItemCount() > 0) {
                        recyclerView.scrollToPosition(0);
                        uiController.loopMainThreadUntilIdle();

                        if (recyclerView.findViewHolderForAdapterPosition(0) != null) {
                            return;
                        }
                    }
                    uiController.loopMainThreadForAtLeast(STATS_RETRY_DELAY_MS);
                }

                throw new AssertionError("Stats RecyclerView has no items");
            }
        };
    }

    private ViewAction waitForAnyTrackStatsItem() {
        return new ViewAction() {
            @Override
            public Matcher<View> getConstraints() {
                return ViewMatchers.isAssignableFrom(View.class);
            }

            @Override
            public String getDescription() {
                return "wait for either audio or video track stats recycler view to contain and bind the first item";
            }

            @Override
            public void perform(UiController uiController, View view) {
                RecyclerView videoRecyclerView = view.findViewById(R.id.multitrack_stats_popup_play_stats_video_track_recyclerview);
                RecyclerView audioRecyclerView = view.findViewById(R.id.multitrack_stats_popup_play_stats_audio_track_recyclerview);

                assertNotNull("Video stats RecyclerView is missing", videoRecyclerView);
                assertNotNull("Audio stats RecyclerView is missing", audioRecyclerView);
                assertNotNull("Video stats RecyclerView adapter is null", videoRecyclerView.getAdapter());
                assertNotNull("Audio stats RecyclerView adapter is null", audioRecyclerView.getAdapter());

                for (int i = 0; i < STATS_RETRY_COUNT; i++) {
                    if (hasBoundTrackStatsItem(videoRecyclerView, uiController) || hasBoundTrackStatsItem(audioRecyclerView, uiController)) {
                        return;
                    }
                    uiController.loopMainThreadForAtLeast(STATS_RETRY_DELAY_MS);
                }

                throw new AssertionError("Neither video nor audio stats RecyclerView has any items");
            }
        };
    }

    private ViewAction waitForNumericTextViewValueGreaterThan(int textViewId, float minimumValue, String timeoutMessage) {
        return new ViewAction() {
            @Override
            public Matcher<View> getConstraints() {
